12.explorer/explorer.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: explorer
spec:
  selector:
    matchLabels:
      app: explorer
  template:
    metadata:
      labels:
        app: explorer
    spec:
      volumes:
        - name: fabricfiles
          persistentVolumeClaim:
            claimName: nfs-pvc
        - name: explorer-config
          configMap:
            name: explorer-config
            items:
              - key: config.json
                path: config.json
              - key: network.json
                path: network.json
      containers:
        - name: explorer
          image: hyperledger/explorer:latest
          resources:
            limits:
              memory: "528Mi"
              cpu: "400m"
          ports:
            - containerPort: 8080
          volumeMounts:
            - mountPath: /organizations
              name: fabricfiles
              subPath: organizations
            - mountPath: /opt/explorer/app/platform/fabric/config.json
              name: explorer-config
              subPath: config.json  
            - mountPath: /opt/explorer/app/platform/fabric/first-network.json
              name: explorer-config
              subPath: network.json  

---
apiVersion: v1
kind: Service
metadata:
  name: explorer
spec:
  selector:
    app: explorer
  ports:
    - port: 8080
      targetPort: 8080
